(Format: Year/Month/Day)
Changes for 0.9.16:
*06/04/02:
   * size_t fixes. (Thanks Semushin Slava aka php-coder)
*06/03/27:
   * Fix crash when deiconifying stuck windows with Follow mode (Simon)
     IconButton.cc
   * Don't Follow stuck windows on deiconify, since they're stuck 
     (thanks _markt)
     IconButton.cc
*06/03/26:
   * Related to external (Simon)
     - Fix title alignment
     - Fix "jumpy" vertical tabs on tab size change & other change-related
     - Fix alignment error for left-hand vertical tabs
     FbWinFrame.cc Container.cc
   * More external tabs work AND rotated Xft text (Simon)
     - new tab positions (LeftTop, LeftBottom, etc)
     - TextButtons and Containers can have orientation set on them
     - XftFonts store all rotated versions (if used), 
       so the theme doesn't need to know about it. Pixmaps are also auto-rotated.
     - TODO: Update XFontImp rotation code
     - Note: many files touched because constness removed from many fonts
     FbTk/  Button.hh FbPixmap.hh/cc Font.hh/cc FontImp.hh ImageControl.hh/cc
            Text.hh/cc TextButton.hh/cc TextureRender.hh/cc XFontImp.hh/cc
            XftFontImp.hh/cc XmbFontImp.hh/cc
     Container.hh/cc FbWinFrame.hh/cc FbWinFrameTheme.hh IconButton.hh/cc
     IconbarTheme.hh IconbarTool.hh Screen.cc ToolFactory.hh/cc
     WinButtonTheme.hh/cc
     tests/testFont.cc
*06/03/24:
   * Fix compile error in Theme.cc (sf.net bug #1454204)
     FbTk/Theme.cc
   * Fixed apps filename on save (Thanks mal at komcept com)
     Remember.cc
*06/03/23:
   * Fixed duplicate ClickToFocus menu item (Thanks _markt)
   * Fix some tab stacking alignment and rendering on tab resize (Simon)
     (and very minor tidying)
     FbWinFrame.cc FbTk/XLayer.cc FbTk/XLayerItem.hh/cc
*06/03/22:
   * More external tabs work (Simon)
     - Can now be placed TopLeft/TopRight/BottomLeft/BottomRight
     - New "Tab Options" config menu, with (efficient) runtime updating